# dofus-huntforge

./: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
scraper/: .env.example  .gitignore  README.md  index.ts  package-lock.json  package.json  types.ts
scraper/src/: common.ts  core.ts  data.ts  logger.ts  puppeteer.ts
scraper/src/utils/: common.ts  data.ts  logger.ts
scrapper/: README.md  index.ts  package-lock.json  package.json  types.ts
scrapper/src/: data.ts  logger.ts
scrapper/src/utils/: common.ts  index.ts  puppeteer.ts
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: data.rs  lib.rs  main.rs
src/lib/components/: DirectionSelector.svelte  Header.svelte  HintSelector.svelte  PositionSelector.svelte
src/lib/context/: HuntContext.svelte.ts
src/routes/: +layout.svelte  +page.svelte
