[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-build = { version = "2.3.1", features = [] }
phf = { version = "0.12.1", features = ["macros"] }
phf_codegen = "0.12.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
phf = { version = "0.12.1", features = ["macros"] }
